BOLT-24177, fix post layout issue

--- a/app/styles/v2/partials/components/adFeatureSelection/_adFeatureSelection.scss
+++ b/app/styles/v2/partials/components/adFeatureSelection/_adFeatureSelection.scss
@@ -52,6 +52,12 @@
 		text-align: center;
 		font-size: large;
 		color: $formLabelTextColor;
+		.icon-corner-lightning {
+			background-repeat: no-repeat;
+			display: inline-block;
+			float: right;
+			margin: -12px -1px auto auto;
+		}
 	}
 	.feature-wrapper {
 		float: left;
